--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1526,6 +1526,29 @@ section {
   border-radius: 
 }
 
+.projects .submit button {
+  background-color: var(--primary-color);
+  border: 0;
+  padding: 10px 30px;
+  transition: 0.4s;
+  border-radius: 4px;
+  display: inline-block;
+}
+
+.projects .submit button:hover {
+  background-color: #023963;
+  color: white;
+  font-weight: bold;
+  padding: 10px 30px;
+  transition: 0.4s;
+  border-radius: 4px;
+}
+
+.projects .submit button a {
+  color: white;
+  font-weight: bold;
+}
+
 /* Portfolio Section - Home Page
 ------------------------------*/
 .portfolio .portfolio-filters {
@@ -2346,10 +2369,19 @@ section {
   }
 }
 
-.venue .venue-map iframe {
+.contact .venue{
   width: 100%;
   height: 100%;
   min-height: 300px;
+  position: absolute;
+}
+
+@media (max-width: 1400px) {
+  .contact .venue {
+    width: 80%;
+    height: 80%;
+    position: absolute;
+  }
 }
 
 /*--------------------------------------------------------------
