--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2369,18 +2369,40 @@ section {
   }
 }
 
-.contact .venue{
-  width: 100%;
-  height: 100%;
+.contact .venue-map iframe{
+  width: 600px;
+  height: 450px;
   min-height: 300px;
-  position: absolute;
+  position: relative;
 }
 
 @media (max-width: 1400px) {
-  .contact .venue {
-    width: 80%;
-    height: 80%;
-    position: absolute;
+  .contact .venue-map iframe{
+    width: 35vw;
+    height: 30vw;
+    position: relative;
+    align-content: center;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 1200px) {
+  .contact .venue-map iframe{
+    width: 35vw;
+    height: 35vw;
+    position: relative;
+    align-content: center;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 1000px) {
+  .contact .venue-map iframe{
+    width: 70vw;
+    height: 35vw;
+    position: relative;
+    align-content: center;
+    justify-content: center;
   }
 }
 
