--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1428,6 +1428,11 @@ section {
 
 /* Projects Section - Home Page
 ------------------------------*/
+/* Carousel options*/
+
+/* --End Carousel--*/
+
+
 .projects .projects-item {
   color: rgba(var(--default-color-rgb), 0.8);
 }
