--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -815,7 +815,8 @@ section {
   --background-color: #000000;
   --background-color-rgb: 0, 0, 0;
   width: 100%;
-  min-height: 100vh;
+  height: 85vh;
+  /*min-height: 85vh;*/
   position: relative;
   padding: 160px 0 80px 0;
   display: flex;
@@ -848,10 +849,16 @@ section {
 @media (max-width: 1400px) {
   .hero .hero-img img {
     position: relative;
-    width: 70%;
+    width: 50%;
     /*height: 80%;*/
     /*left: 15%;*/
-    margin-top: 10px;
+    margin-top: 15px;
+  }
+}
+
+@media (max-width: 1400px) {
+  .hero {
+    height: 80vh;
   }
 }
 
@@ -985,8 +992,8 @@ section {
   padding: 40px;
   max-width: 80%;
   transition: 0.3s;
-  opacity: 0.5;
-  filter: grayscale(100);
+  opacity: 0.9;
+  filter: grayscale(70%);
 }
 
 .clients .client-logo img:hover {
@@ -996,7 +1003,10 @@ section {
 
 @media (max-width: 640px) {
   .clients .client-logo img {
-    padding: 20px;
+    max-width: 60%;
+    padding: 10px;
+    opacity: 1;
+    filter: none;
   }
 }
 
