--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -979,6 +979,8 @@ section {
 .clients {
   padding: 10px 0;
   background-color: rgba(217, 96, 0, 0.4);
+  position: relative;
+  z-index: 2;
 }
 
 .clients .client-logo {
@@ -1258,7 +1260,7 @@ section {
 }
 
 #schedule .schedule-org p {
-    display: flex;
+  display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
