--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -256,7 +256,7 @@ section {
 /* Home Page Custom Header
 ------------------------------*/
 .index-page .header {
-  --background-color: rgba(255, 255, 255, 0);
+  --background-color: rgba(0, 0, 0, 0.6);
   --secondary-color: #ffffff;
   --nav-color: rgba(255, 255, 255, 0.515);
   --nav-hover-color: #ffffff;
@@ -815,7 +815,7 @@ section {
   --background-color: #000000;
   --background-color-rgb: 0, 0, 0;
   width: 100%;
-  height: 85vh;
+  height: 100vh;
   /*min-height: 85vh;*/
   position: relative;
   padding: 160px 0 80px 0;
@@ -824,7 +824,7 @@ section {
   justify-content: center;
 }
 
-.hero img {
+/*.hero img {
   position: absolute;
   inset: 0;
   display: block;
@@ -833,6 +833,26 @@ section {
   -o-object-fit: cover;
   object-fit: cover;
   z-index: 1;
+  filter: none;
+  opacity: 1;
+}*/
+
+.hero picture,
+.hero picture img {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* keeps aspect ratio, fills the screen */
+  object-position: center;
+  z-index: 1;
+}
+
+@media (max-width: 800px) {
+  .hero {
+    height: 100vh;
+    min-height: 100vh;
+  }
 }
 
 .hero .hero-img img {
@@ -856,15 +876,15 @@ section {
   }
 }
 
-@media (max-width: 1400px) {
+/*@media (max-width: 1400px) {
   .hero {
     height: 80vh;
   }
-}
+}*/
 
 .hero:before {
   content: "";
-  background: rgba(var(--background-color-rgb), 0.5);
+  background: rgba(var(--background-color-rgb), 0.);
   position: absolute;
   inset: 0;
   z-index: 5;
@@ -980,8 +1000,8 @@ section {
   padding: 10px 0;
   background-color: rgba(217, 96, 0, 0.4);
   position: relative;
-  z-index: 2;
-}
+  /*z-index: 2;
+*/}
 
 .clients .client-logo {
   display: flex;
